  -  Added some keywords for VHDL (beshig, BenBE)
  -  Fixed severly broken ColdFusion language file (milian)
  -  Make sure strict_mode is set properly when doing repeated set_language calls (milian)
  -  Fixed some incorrectly highlighted things with the CSS language file (milian, BenBE)
  -  Fixed broken use with Suhosin Patch when /e modifier was disabled (SF#2021800, BenBE)
  -  Removed format_header/footer_content methods. They were private and both used only in the header/footer
     methods, thus don't need to be methods at all! (milian)
  -  Second part of default style changes. Affected in this release:
     * C++
     * C++ (QT)
     * CSS
     * VHDL
Version 1.0.7.22
  -  Added language files
     * glSlang (BenBE)
     * KiXtart (Riley McArdle)
     * Lotus Notes @Formulas (Richard Civil)
     * LotusScript (Richard Civil)
     * MXML (David Spurr)
     * Scala (Franco Lombardo)
     * ActionScript 3 (Jordi Boggiano)
     * GNU Gettext .po/.pot (Milian Wolff)
     * Verilog (Günter Dannoritzer)
  -  Fixed a problem not yet addressed in 1.0.7.21 regarding highlighting of
     symbols that caused some extra characters to be added in the output or
     broke highlighting and standard compliance due to missing escaping of
     internally used characters (SF#192320 and SF#1926259, BenBE)
  -  Fixed missing style information for ocaml language file (The_PHP_Jedi)
  -  Fixed a bug causing masses of warnings in rendered output if language file
     miss style information (The_PHP_Jedi, BenBE)
  -  Missing tab width information could lead to warnings (BenBE)
  -  Missing symbol information for ASP (SF#1952038, nfsupport, BenBE)
  -  Empty delimiter message with OOoBasic (BenBE, Ccornell)
  -  Escaping of comments in LaTeX ignored (SF#1749806, BenBE)
  -  Modified Math environment $$ in LaTeX to be non-greedy (BenBE)
  -  Added possibility to match a regexp as comment (SF#1914640, SF#1945301, SF#1934832, BenBE)